setup ngx-schema-form and initial widgets

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,10 @@
 <div class="w-[90vw] h-full mx-auto my-3">
   <mat-card appearance="outlined">
     <div class="p-1">
-      <mat-card-title class="!flex justify-center items-center !mt-4">Ngx Schema Form</mat-card-title>
-      <mat-card-content>Simple card</mat-card-content>
+      <mat-card-title class="!flex justify-center items-center !my-2"><h4>Ngx Schema Form</h4></mat-card-title>
+      <mat-card-content>
+        <sf-form [schema]="mySchema"></sf-form>
+      </mat-card-content>
     </div>
   </mat-card>
 </div>
